# fastrpa

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docs.yaml  publish.yaml  tests.yaml
docs/: index.md  low-level.md  selenium.md  xpath-tools.md
docs/elements/: buttons.md  checkboxes.md  file-inputs.md  forms.md  images.md  index.md  inputs.md  lists.md  radio-inputs.md  selects.md  tables.md
docs/interactions/: console.md  cookies.md  index.md  keyboard.md  screenshot.md  tabs.md  wait.md
fastrpa/: __init__.py  app.py  commons.py  dataclasses.py  decorators.py  exceptions.py  factories.py  factory.py  settings.py  types.py  utils.py  xpath.py
fastrpa/core/: console.py  cookies.py  elements.py  elements_factory.py  file.py  keyboard.py  screenshot.py  tabs.py  timer.py  wait.py
fastrpa/elements/: form.py
tests/: test_app_fastrpa.py  test_utils.py  test_xpath.py
