[tool.poetry]
name = "fastrpa"
version = "0.1.0"
description = "A simple to use abstraction over Selenium"
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.22.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240622"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"
pytest = "^8.3.2"
pytest-randomly = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vvv"
testpaths = [
    "tests",
]
